<resources>
    <string name="app_name">Pompodoro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stop">stop</string>
    <string name="reset_timer">reset</string>
    <string name="work_time">Work time: %s</string>
    <string name="Srest_time">Short rest time: %s</string>
    <string name="Lrest_time">Long rest time: %s</string>
    <string name="cycles_count">Work cycles count: %d</string>
    <string name="autoplay_next">AutoPlay next timer</string>
</resources>
