<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical"
        tools:context=".fragments.SettingsFragment">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_pop_settings"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="4dp"
            android:layout_margin="16dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pop_settings">

        <TextView
                android:id="@+id/txt_workTime"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/work_time"
                app:srcCompat="@drawable/ic_skip_next" />

        <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_workTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorPrimaryLight"
                android:max="60" />

        <TextView
                android:id="@+id/txt_srestTime"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/Srest_time"
                app:srcCompat="@drawable/ic_skip_next" />

        <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_srestTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:max="60" />

        <TextView
                android:id="@+id/txt_lrestTime"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/Lrest_time"
                app:srcCompat="@drawable/ic_skip_next" />

        <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_lrestTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:max="60" />

        <TextView
                android:id="@+id/txt_cyclesCount"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/cycles_count"
                app:srcCompat="@drawable/ic_skip_next" />

        <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_cyclesCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:max="12" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chkbx_autostart"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autoplay_next"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>